--- a/pandoc-defaults.yaml
+++ b/pandoc-defaults.yaml
@@ -36,9 +36,9 @@ metadata:
       canon.
 
       Included Stories:
-        The Deathworlders, by Hambone
-        The Xiù Chang Saga, by /u/Hume_reddit
-        MIA, by /u/GoingAnywhereButHere
+        The Deathworlders, by Hambone; 
+        The Xiù Chang Saga, by /u/Hume_reddit; 
+        MIA, by /u/GoingAnywhereButHere; 
         Good Training, by /u/Ctwelve
   
 
